[package]
name = "traeger"
description = "programmable brower proxy"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["Krzysztof Jan Modras <chrmod@chrmod.net>"]

[dependencies]
byteorder = "1.0.0"
webextension-protocol = "0.1.0"
rustc-serialize = "0.3"
js = {git = "https://github.com/servo/rust-mozjs", features = ["promises"] }
libc = "0.2"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C","link-args=\"-s\""]
